Fixed alignment.

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .App {
-  height: 100vh;
-  width: 100vw;
-}
-
-.App-main {
   display: flex;
   flex-direction: row;
+  font-family: 'Roboto', sans-serif;
 }
 
 .side-bar {
@@ -24,6 +20,8 @@
 }
 
 .menu {
+  display: flex;
+  flex-direction: column;
   color: white;
   font-family: 'Roboto', sans-serif;
   font-size: 1.25em;
@@ -40,12 +38,15 @@
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  width: 70vw;
+  width: 80vw;
   padding: 2em;
   overflow: scroll;
   float: right;
   box-sizing: border-box;
+  justify-content: center;
 }
 
 .footer {
